# turbo-bw8

./: README.md  bw8.asm  hazard_logic.xlsx  isa.asm  isa.typ  isa.xlsx  isa_take2.xlsx  programming_model.md  ~$isa_take2.xlsx
scripts/: bit_ops.py  decode.py  mmap.txt  progmem.py  pyproject.toml
sim/: alu.dig  cpu.dig  de_ex.dig  decode.dig  ex_mem.dig  f_de.dig  fetch.dig  mem.dig  mem_wb.dig  mmu.dig  operands.dig  pc.dig  regfile.dig  segfile.dig  stall.dig
