[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["bwburnsides <19192452+bwburnsides@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyright = "^1.1.350"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
